Preventing zoom on mobiles devices.

--- a/src/app/components/mobile-menu/mobile-menu.component.scss
+++ b/src/app/components/mobile-menu/mobile-menu.component.scss
@@ -2,6 +2,8 @@
     position: absolute;
     inset: 0;
     background-color: #1b1b1b;
+    touch-action: none;
+    user-select: none;
 
     ul {
         padding: 150px 40px 0 40px;
